Temp fix for external link icon cropping issue

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -220,3 +220,9 @@ abbr[title] {
     overflow: hidden;
   }
 }
+
+// XXX Karl: 19.10.17
+// VF 1.6.0 is missing this
+.p-link--external::after {
+  -webkit-mask-size: cover;
+}
